--- a/wizardmaker.html
+++ b/wizardmaker.html
@@ -719,7 +719,7 @@ document.getElementById('addPageBtnSidebar').onclick=()=>{
 // Initial render
 renderLibraryAssets();
 </script>
-    <!-- ========== Fixed Theme Module (Part 1 – Section-specific text colors + card fix) ========== -->
+   <!-- ========== Theme Module (Part 1 – Fixed with WCAG Contrast + Card Override) ========== -->
 <style>
 #themePanel {
   position: fixed;
@@ -765,6 +765,7 @@ renderLibraryAssets();
 
 <script>
 (function(){
+  // ----------------- Theme Presets -----------------
   const themePresets = [
     {name:'Oceanic', primary:'#0b79ff', accent:'#06b6d4', bg:'#f6fbff'},
     {name:'Midnight', primary:'#7c3aed', accent:'#06b6d4', bg:'#071026'},
@@ -797,64 +798,53 @@ renderLibraryAssets();
     themeGrid.appendChild(tile);
   });
 
+  // ----------------- Apply Theme -----------------
   function applyTheme(theme){
     const iframe = iframeRefs[activePage];
     if(!iframe) return alert("No active page loaded.");
     const doc = iframe.contentDocument || iframe.contentWindow.document;
 
-    const cardBg = adjustCardBg(theme.bg);
-
+    // card background calculated from theme.bg
+    const cardBg = adjustColor(theme.bg, luminance(theme.bg) > 0.5 ? -25 : 25);
     const css = `
-      :root {
-        --primary: ${theme.primary};
-        --accent: ${theme.accent};
-        --bg: ${theme.bg};
-        --bodyText: ${safeText(theme.bg)};
-        --headerText: ${safeText(theme.primary)};
-        --footerText: ${safeText(theme.accent)};
-        --cardBg: ${cardBg};
-        --cardText: ${safeText(cardBg)};
-        --buttonText: ${safeText(theme.primary)};
-      }
       body {
-        background: var(--bg) !important;
-        color: var(--bodyText) !important;
+        background: ${theme.bg} !important;
+        color: ${contrastText(theme.bg)} !important;
       }
       header, .header, nav, .nav, .navbar {
-        background: var(--primary) !important;
-        color: var(--headerText) !important;
+        background: ${theme.primary} !important;
+        color: ${contrastText(theme.primary)} !important;
       }
       footer, .footer, .site-footer {
-        background: var(--accent) !important;
-        color: var(--footerText) !important;
+        background: ${theme.accent} !important;
+        color: ${contrastText(theme.accent)} !important;
       }
       h1,h2,h3,h4,h5,h6,p,span,li {
-        color: var(--bodyText) !important;
+        color: inherit !important;
       }
-      a { color: var(--primary) !important; }
+      a { color: ${theme.primary} !important; }
       button, .btn, .button, input[type="submit"], .action-btn, .cta {
-        background: var(--primary) !important;
-        color: var(--buttonText) !important;
+        background: ${theme.primary} !important;
+        color: ${contrastText(theme.primary)} !important;
         border-radius:6px; padding:8px 14px;
       }
       .card, .panel, .tile, .box, .content-card, .card-body {
-        background: var(--cardBg) !important;
-        color: var(--cardText) !important;
-        border: 1px solid var(--primary)44 !important;
+        background: ${cardBg} !important;
+        color: ${contrastText(cardBg)} !important;
         border-radius: 12px;
       }
       input, select, textarea {
-        border: 1px solid var(--primary)88 !important;
+        border: 1px solid ${theme.primary}88 !important;
         border-radius: 6px;
         padding: 6px;
-        color: var(--bodyText) !important;
+        color: ${contrastText(theme.bg)} !important;
       }
       input:focus, select:focus, textarea:focus {
-        outline: 2px solid var(--accent) !important;
+        outline: 2px solid ${theme.accent} !important;
       }
       .section, .container, .hero, .banner {
-        background: linear-gradient(180deg, var(--bg), var(--bg)cc) !important;
-        color: var(--bodyText) !important;
+        background: linear-gradient(180deg, ${theme.bg}, ${theme.bg}cc) !important;
+        color: ${contrastText(theme.bg)} !important;
       }
     `;
 
@@ -883,6 +873,7 @@ renderLibraryAssets();
       }
       editedContents[activePage] = html;
     }
+
     const cssFile = Object.keys(otherFiles).find(f=>f.endsWith(".css"));
     if(cssFile){
       const decoder = new TextDecoder();
@@ -898,7 +889,7 @@ renderLibraryAssets();
     }
   }
 
-  // ---------- Helpers ----------
+  // ----------------- Helpers -----------------
   function hexToRgb(hex){
     hex = hex.replace("#","");
     if(hex.length===3) hex=hex.split("").map(c=>c+c).join("");
@@ -910,16 +901,14 @@ renderLibraryAssets();
     const a=[c.r/255,c.g/255,c.b/255].map(v=>v<=0.03928?v/12.92:Math.pow((v+0.055)/1.055,2.4));
     return 0.2126*a[0]+0.7152*a[1]+0.0722*a[2];
   }
-  function safeText(bg){
-    const L=luminance(bg);
-    return L>0.55 ? "#000" : "#fff";
+  function contrastRatio(hex1, hex2){
+    const L1=luminance(hex1)+0.05;
+    const L2=luminance(hex2)+0.05;
+    return L1>L2?L1/L2:L2/L1;
   }
-  function adjustCardBg(bg){
-    const L=luminance(bg);
-    return L>0.55 ? darken(bg,20) : lighten(bg,20);
+  function contrastText(bg){
+    return contrastRatio(bg, "#000") >= 4.5 ? "#000" : "#fff";
   }
-  function darken(hex, amt){ return adjustColor(hex, -amt); }
-  function lighten(hex, amt){ return adjustColor(hex, amt); }
   function adjustColor(hex, amt){
     let {r,g,b}=hexToRgb(hex);
     r=Math.min(255,Math.max(0,r+amt));
@@ -928,6 +917,7 @@ renderLibraryAssets();
     return `rgb(${r},${g},${b})`;
   }
 
+  // ----------------- Toggle -----------------
   document.getElementById("themeToggleBtn").onclick=()=>{
     const panel=document.getElementById("themePanel");
     panel.style.display=panel.style.display==="none"?"block":"none";
@@ -939,6 +929,7 @@ renderLibraryAssets();
 })();
 </script>
 <!-- ========== /Theme Module ========== -->
+
 
 
 </body>
