--- a/wizardmaker.html
+++ b/wizardmaker.html
@@ -821,24 +821,24 @@ document.getElementById('addPageBtnSidebar').onclick=()=>{
 // Initial render
 renderLibraryAssets();
 </script>
-   <!-- ========== Theme Module (Part 1 – Fixed with WCAG Contrast + Card Override) ========== -->
+<!-- ========== Merged Universal WCAG Theme Module with Export ========== -->
 <style>
 #themePanel {
   position: fixed;
   bottom: 70px;
   right: 20px;
-  width: 320px;
+  width: 340px;
   background: #fff;
   border-radius: 12px;
   padding: 12px;
   box-shadow: 0 12px 30px rgba(0,0,0,0.12);
   z-index: 9999;
   display: none;
+  font-family: sans-serif;
 }
 #themePanel h3 { margin:0 0 10px 0; font-size:16px; }
 #themePanel .preset-grid { 
-  display:grid; grid-template-columns:repeat(3,1fr); gap:8px; 
-  max-height:200px; overflow:auto;
+  display:grid; grid-template-columns:repeat(3,1fr); gap:8px; max-height:220px; overflow:auto;
 }
 #themePanel .preset-tile { 
   border:1px solid #eee; padding:8px; border-radius:8px; cursor:pointer;
@@ -867,6 +867,7 @@ renderLibraryAssets();
 
 <script>
 (function(){
+
   // ----------------- Theme Presets -----------------
   const themePresets = [
     {name:'Oceanic', primary:'#0b79ff', accent:'#06b6d4', bg:'#f6fbff'},
@@ -900,71 +901,105 @@ renderLibraryAssets();
     themeGrid.appendChild(tile);
   });
 
+  // ----------------- Helpers -----------------
+  function hexToRgb(hex){
+    hex=hex.replace("#","");
+    if(hex.length===3) hex=hex.split("").map(c=>c+c).join("");
+    const num=parseInt(hex,16);
+    return {r:(num>>16)&255,g:(num>>8)&255,b:num&255};
+  }
+  function luminance(hex){
+    const c=hexToRgb(hex);
+    const a=[c.r/255,c.g/255,c.b/255].map(v=>v<=0.03928?v/12.92:Math.pow((v+0.055)/1.055,2.4));
+    return 0.2126*a[0]+0.7152*a[1]+0.0722*a[2];
+  }
+  function contrastRatio(c1,c2){
+    const L1=luminance(c1)+0.05;
+    const L2=luminance(c2)+0.05;
+    return L1>L2?L1/L2:L2/L1;
+  }
+  function bestTextColor(bg){
+    return contrastRatio(bg,"#000000")>=4.5 ? "#000000" : "#ffffff";
+  }
+  function rgbToHex(rgb){
+    const m=rgb.match(/\d+/g);
+    if(!m) return "#ffffff";
+    return "#" + m.slice(0,3).map(x=>(+x).toString(16).padStart(2,"0")).join("");
+  }
+  function getEffectiveBg(el, doc){
+    let node=el;
+    while(node && node!==doc){
+      const bg=getComputedStyle(node).backgroundColor;
+      if(bg && bg!=="rgba(0, 0, 0, 0)" && bg!=="transparent") return rgbToHex(bg);
+      node=node.parentElement;
+    }
+    return "#ffffff";
+  }
+  function adjustColor(hex, amt){
+    let {r,g,b}=hexToRgb(hex);
+    r=Math.min(255,Math.max(0,r+amt));
+    g=Math.min(255,Math.max(0,g+amt));
+    b=Math.min(255,Math.max(0,b+amt));
+    return `rgb(${r},${g},${b})`;
+  }
+
   // ----------------- Apply Theme -----------------
   function applyTheme(theme){
-    const iframe = iframeRefs[activePage];
-    if(!iframe) return alert("No active page loaded.");
-    const doc = iframe.contentDocument || iframe.contentWindow.document;
+    const iframe = (typeof iframeRefs!=="undefined" && iframeRefs[activePage]) ? iframeRefs[activePage] : null;
+    const doc = iframe ? (iframe.contentDocument || iframe.contentWindow.document) : null;
+    if(!doc) return;
 
-    // card background calculated from theme.bg
-    const cardBg = adjustColor(theme.bg, luminance(theme.bg) > 0.5 ? -25 : 25);
+    // Live inline styling (Universal module)
+    doc.body.style.setProperty("background-color", theme.bg, "important");
+
+    doc.querySelectorAll(".hero, .banner, .jumbotron, .section, main, .container").forEach(el=>{
+      const bg = adjustColor(theme.bg, luminance(theme.bg)>0.5?-15:15);
+      el.style.setProperty("background", bg, "important");
+      el.style.setProperty("color", bestTextColor(bg), "important");
+    });
+    doc.querySelectorAll(".card, .panel, .tile, .box, .content-card, .card-body").forEach(el=>{
+      const bg = adjustColor(theme.accent, luminance(theme.accent)>0.5?-20:20);
+      el.style.setProperty("background", bg, "important");
+      el.style.setProperty("color", bestTextColor(bg), "important");
+      el.style.setProperty("border-color", adjustColor(bg,-20), "important");
+    });
+    doc.querySelectorAll("header, .header, nav, .nav, .navbar, footer, .footer, .site-footer").forEach(el=>{
+      const bg = theme.primary;
+      el.style.setProperty("background", bg, "important");
+      el.style.setProperty("color", bestTextColor(bg), "important");
+    });
+    doc.querySelectorAll("button, .btn, .button, a.button, a.btn, input[type=submit], .cta").forEach(el=>{
+      const bg = theme.primary;
+      el.style.setProperty("background", bg, "important");
+      el.style.setProperty("color", bestTextColor(bg), "important");
+      el.style.setProperty("border","1px solid "+adjustColor(bg,-20), "important");
+      el.style.setProperty("border-radius","6px", "important");
+      el.style.setProperty("padding","6px 12px", "important");
+    });
+    doc.querySelectorAll("a").forEach(el=>{
+      const bg = getEffectiveBg(el, doc);
+      const fg = theme.primary;
+      const finalColor = contrastRatio(bg, fg)<4.5 ? bestTextColor(bg) : fg;
+      el.style.setProperty("color", finalColor, "important");
+    });
+    doc.querySelectorAll("h1,h2,h3,h4,h5,h6,p,span,li,label,strong,em").forEach(el=>{
+      const bg = getEffectiveBg(el, doc);
+      el.style.setProperty("color", bestTextColor(bg), "important");
+    });
+
+    // Inject <style> for saving/export (Part 1 logic)
     const css = `
-      body {
-        background: ${theme.bg} !important;
-        color: ${contrastText(theme.bg)} !important;
-      }
-      header, .header, nav, .nav, .navbar {
-        background: ${theme.primary} !important;
-        color: ${contrastText(theme.primary)} !important;
-      }
-      footer, .footer, .site-footer {
-        background: ${theme.accent} !important;
-        color: ${contrastText(theme.accent)} !important;
-      }
-      h1,h2,h3,h4,h5,h6,p,span,li {
-        color: inherit !important;
-      }
-      a { color: ${theme.primary} !important; }
-      button, .btn, .button, input[type="submit"], .action-btn, .cta {
-        background: ${theme.primary} !important;
-        color: ${contrastText(theme.primary)} !important;
-        border-radius:6px; padding:8px 14px;
-      }
-      .card, .panel, .tile, .box, .content-card, .card-body {
-        background: ${cardBg} !important;
-        color: ${contrastText(cardBg)} !important;
-        border-radius: 12px;
-      }
-      input, select, textarea {
-        border: 1px solid ${theme.primary}88 !important;
-        border-radius: 6px;
-        padding: 6px;
-        color: ${contrastText(theme.bg)} !important;
-      }
-      input:focus, select:focus, textarea:focus {
-        outline: 2px solid ${theme.accent} !important;
-      }
-      .section, .container, .hero, .banner {
-        background: linear-gradient(180deg, ${theme.bg}, ${theme.bg}cc) !important;
-        color: ${contrastText(theme.bg)} !important;
-      }
+      body { background: ${theme.bg} !important; color: ${bestTextColor(theme.bg)} !important; }
+      header, .header, nav, .nav, .navbar, footer, .footer, .site-footer { background: ${theme.primary} !important; color: ${bestTextColor(theme.primary)} !important; }
+      .card, .panel, .tile, .box, .content-card, .card-body { background: ${adjustColor(theme.accent,luminance(theme.accent)>0.5?-20:20)} !important; color: ${bestTextColor(adjustColor(theme.accent,luminance(theme.accent)>0.5?-20:20))} !important; border-radius:12px; }
+      button, .btn, .button, input[type=submit], .cta { background: ${theme.primary} !important; color: ${bestTextColor(theme.primary)} !important; border-radius:6px; padding:6px 12px; border:1px solid ${adjustColor(theme.primary,-20)}; }
     `;
-
-    injectThemeCss(doc, css);
     saveThemeToEditedContents(css);
   }
 
-  function injectThemeCss(doc, css){
-    let styleTag = doc.getElementById("__wizard_theme");
-    if(!styleTag){
-      styleTag = doc.createElement("style");
-      styleTag.id="__wizard_theme";
-      doc.head.appendChild(styleTag);
-    }
-    styleTag.innerHTML = css;
-  }
-
+  // ----------------- Save & Export Logic (Part 1) -----------------
   function saveThemeToEditedContents(css){
+    if(typeof editedContents==="undefined" || typeof activePage==="undefined") return;
     let html = editedContents[activePage];
     if(html){
       if(html.includes("__wizard_theme")){
@@ -975,64 +1010,50 @@ renderLibraryAssets();
       }
       editedContents[activePage] = html;
     }
-
-    const cssFile = Object.keys(otherFiles).find(f=>f.endsWith(".css"));
-    if(cssFile){
-      const decoder = new TextDecoder();
-      const encoder = new TextEncoder();
-      let cssText = decoder.decode(otherFiles[cssFile]);
-      if(cssText.includes("/* WizardMaker Theme */")){
-        cssText = cssText.replace(/\/\* WizardMaker Theme \*\/([\s\S]*?)\/\* End Theme \*\//,
-          `/* WizardMaker Theme */\n${css}\n/* End Theme */`);
-      } else {
-        cssText += `\n/* WizardMaker Theme */\n${css}\n/* End Theme */`;
+    // CSS file
+    if(typeof otherFiles!=="undefined"){
+      const cssFile = Object.keys(otherFiles).find(f=>f.endsWith(".css"));
+      if(cssFile){
+        const decoder = new TextDecoder();
+        const encoder = new TextEncoder();
+        let cssText = decoder.decode(otherFiles[cssFile]);
+        if(cssText.includes("/* WizardMaker Theme */")){
+          cssText = cssText.replace(/\/\* WizardMaker Theme \*\/([\s\S]*?)\/\* End Theme \*\//,
+            `/* WizardMaker Theme */\n${css}\n/* End Theme */`);
+        } else {
+          cssText += `\n/* WizardMaker Theme */\n${css}\n/* End Theme */`;
+        }
+        otherFiles[cssFile] = encoder.encode(cssText);
       }
-      otherFiles[cssFile] = encoder.encode(cssText);
     }
   }
 
-  // ----------------- Helpers -----------------
-  function hexToRgb(hex){
-    hex = hex.replace("#","");
-    if(hex.length===3) hex=hex.split("").map(c=>c+c).join("");
-    const num = parseInt(hex,16);
-    return {r:(num>>16)&255, g:(num>>8)&255, b:num&255};
-  }
-  function luminance(hex){
-    const c=hexToRgb(hex);
-    const a=[c.r/255,c.g/255,c.b/255].map(v=>v<=0.03928?v/12.92:Math.pow((v+0.055)/1.055,2.4));
-    return 0.2126*a[0]+0.7152*a[1]+0.0722*a[2];
-  }
-  function contrastRatio(hex1, hex2){
-    const L1=luminance(hex1)+0.05;
-    const L2=luminance(hex2)+0.05;
-    return L1>L2?L1/L2:L2/L1;
-  }
-  function contrastText(bg){
-    return contrastRatio(bg, "#000") >= 4.5 ? "#000" : "#fff";
-  }
-  function adjustColor(hex, amt){
-    let {r,g,b}=hexToRgb(hex);
-    r=Math.min(255,Math.max(0,r+amt));
-    g=Math.min(255,Math.max(0,g+amt));
-    b=Math.min(255,Math.max(0,b+amt));
-    return `rgb(${r},${g},${b})`;
-  }
-
-  // ----------------- Toggle -----------------
-  document.getElementById("themeToggleBtn").onclick=()=>{
+  // ----------------- Panel Toggle & Custom Theme -----------------
+  document.getElementById("themeToggleBtn").onclick=()=> {
     const panel=document.getElementById("themePanel");
     panel.style.display=panel.style.display==="none"?"block":"none";
   };
-  document.getElementById("applyCustomTheme").onclick=()=>{
+  document.getElementById("applyCustomTheme").onclick=()=> {
     const t={name:"Custom", primary:primaryColor.value, accent:accentColor.value, bg:bgColor.value};
     applyTheme(t);
   };
+
+  // ----------------- Windows-safe Export Function -----------------
+  window.exportSiteZip = function(zipContent, fileName="site.zip"){
+    const blob = new Blob([zipContent], {type:"application/zip"});
+    const url = URL.createObjectURL(blob);
+    const a = document.createElement("a");
+    a.href = url;
+    a.download = fileName;
+    document.body.appendChild(a);
+    a.click();
+    document.body.removeChild(a);
+    URL.revokeObjectURL(url);
+  };
+
 })();
 </script>
-<!-- ========== /Theme Module ========== -->
-
-
+<!-- ========== /Merged Module ========== -->
 
 </body>
 </html> 
