--- a/wizardmaker.html
+++ b/wizardmaker.html
@@ -1054,9 +1054,8 @@ renderLibraryAssets();
 })();
 </script>
 <!-- ========== /Merged Module ========== -->
-  <!-- === Library Drawer Tool (attach to + button) === -->
+ <!-- === Library Drawer Tool (integrated with livePreview + editedContents) === -->
 <style>
-  /* Drawer styles */
   #libraryDrawer {
     position: fixed;
     top: 0;
@@ -1098,43 +1097,46 @@ renderLibraryAssets();
     margin-bottom: 10px;
     border: 1px solid #ddd;
     border-radius: 8px;
-    cursor: pointer;
+    cursor: grab;
     background: #fafafa;
     transition: all 0.2s ease;
   }
-  .lib-item:hover {
-    background: #eef4ff;
-    border-color: #0b5cff;
-  }
-  .lib-item h4 {
-    margin: 0;
-    font-size: 14px;
-  }
-  .lib-item small {
-    display: block;
-    font-size: 12px;
-    color: #666;
-  }
+  .lib-item:hover { background: #eef4ff; border-color: #0b5cff; }
+  .lib-item h4 { margin: 0; font-size: 14px; }
+  .lib-item small { display: block; font-size: 12px; color: #666; }
   .lib-preview {
     width: 100%;
-    height: 180px;
+    height: 160px;
     border: 1px solid #ddd;
     border-radius: 6px;
     overflow: hidden;
     margin-top: 8px;
     background: #fff;
   }
-  .lib-preview iframe {
-    width: 100%;
-    height: 100%;
-    border: 0;
-  }
+  .lib-preview iframe { width: 100%; height: 100%; border: 0; }
   #libraryDrawer footer {
     padding: 10px;
     border-top: 1px solid #eaeaea;
     font-size: 12px;
     color: #777;
     text-align: center;
+  }
+  .drop-overlay {
+    position: absolute;
+    inset: 0;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    pointer-events: none;
+  }
+  .drop-overlay.show { display: flex; }
+  .drop-target {
+    padding: 18px 24px;
+    background: rgba(11,92,255,0.06);
+    border-radius: 12px;
+    border: 2px dashed rgba(11,92,255,0.14);
+    font-size: 14px;
+    color: #0b5cff;
   }
 </style>
 
@@ -1146,9 +1148,11 @@ renderLibraryAssets();
   <div class="list" id="libraryList">
     <div style="padding:10px;color:#777">Loading library…</div>
   </div>
-  <footer>
-    Drag or click items to load them into preview. Excludes Site ZIP files.
-  </footer>
+  <footer>Click or drag a page to add it to Live Preview & Export.</footer>
+</div>
+
+<div class="drop-overlay" id="dropOverlay">
+  <div class="drop-target">Drop here to insert page →</div>
 </div>
 
 <script>
@@ -1156,19 +1160,33 @@ renderLibraryAssets();
   const drawer = document.getElementById("libraryDrawer");
   const closeBtn = document.getElementById("closeLibraryBtn");
   const list = document.getElementById("libraryList");
-  const plusBtn = document.querySelector("#plusBtn"); // <- your existing + button
+  const plusBtn = document.querySelector("#plusBtn"); // your existing +
   const livePreview = document.getElementById("livePreview");
+  const dropOverlay = document.getElementById("dropOverlay");
+  const previewWrap = livePreview?.parentElement;
 
-  // Project storage (export system will pick this up)
+  // Ensure globals
   window.editedContents = window.editedContents || {};
-  let activePage = "index.html";
+  window.activePage = window.activePage || "index.html";
 
-  // Toggle drawer
   function toggleDrawer(open){ drawer.classList.toggle("open", open); }
   plusBtn?.addEventListener("click", ()=> toggleDrawer(true));
   closeBtn.addEventListener("click", ()=> toggleDrawer(false));
 
-  // Load library.html and build list
+  // Insert page into system
+  function insertPage(name, code){
+    let filename = name.replace(/\\s+/g,"_").toLowerCase() + ".html";
+    let counter = 1;
+    while(window.editedContents[filename]){
+      filename = name.replace(/\\s+/g,"_").toLowerCase() + "_" + counter + ".html";
+      counter++;
+    }
+    window.editedContents[filename] = code;
+    window.activePage = filename;
+    if(livePreview) livePreview.srcdoc = code;
+  }
+
+  // Load library.html
   async function loadLibrary(){
     try {
       const res = await fetch("library.html");
@@ -1176,18 +1194,17 @@ renderLibraryAssets();
       const parser = new DOMParser();
       const doc = parser.parseFromString(html, "text/html");
 
-      // Assume library.html groups entries under sections like <section data-category="Pages">
       const sections = [...doc.querySelectorAll("section[data-category]")];
       list.innerHTML = "";
 
       if(sections.length === 0){
-        list.innerHTML = "<div style='padding:10px;color:#999'>No items found in library.</div>";
+        list.innerHTML = "<div style='padding:10px;color:#999'>No items in library.</div>";
         return;
       }
 
       sections.forEach(section=>{
         const category = section.dataset.category;
-        if(category.toLowerCase().includes("sitezip")) return; // exclude site zip
+        if(category.toLowerCase().includes("sitezip")) return;
 
         const title = document.createElement("div");
         title.className = "lib-category";
@@ -1197,16 +1214,15 @@ renderLibraryAssets();
         const items = [...section.querySelectorAll("[data-type]")];
         items.forEach(el=>{
           const type = el.dataset.type || "page";
-          if(type === "sitezip") return; // skip site zips
-
+          if(type === "sitezip") return;
           const name = el.dataset.name || el.querySelector("h3,h4")?.textContent || "Untitled";
           const code = el.innerHTML;
 
           const item = document.createElement("div");
           item.className = "lib-item";
+          item.draggable = true;
           item.innerHTML = `<h4>${name}</h4><small>Type: ${type}</small>`;
 
-          // Preview
           const preview = document.createElement("div");
           preview.className = "lib-preview";
           const iframe = document.createElement("iframe");
@@ -1214,27 +1230,44 @@ renderLibraryAssets();
           preview.appendChild(iframe);
           item.appendChild(preview);
 
-          // Insert on click
+          // click inserts
           item.addEventListener("click", ()=>{
-            const filename = (name.replace(/\\s+/g,"_").toLowerCase() || "page") + ".html";
-            editedContents[filename] = code;
-            activePage = filename;
-            if(livePreview){
-              livePreview.srcdoc = code;
-              toggleDrawer(false);
-            }
-            alert("Page '"+name+"' loaded into live preview and added to export list.");
+            insertPage(name, code);
+            toggleDrawer(false);
+            alert("Page '"+name+"' added to Live Preview and export.");
           });
+
+          // drag support
+          item.addEventListener("dragstart", (e)=>{
+            e.dataTransfer.setData("text/plain", JSON.stringify({name, code}));
+            dropOverlay.classList.add("show");
+          });
+          item.addEventListener("dragend", ()=> dropOverlay.classList.remove("show"));
 
           list.appendChild(item);
         });
       });
-
     } catch(err){
-      console.error("Error loading library:", err);
+      console.error("Library load error:", err);
       list.innerHTML = "<div style='padding:10px;color:red'>Failed to load library.html</div>";
     }
   }
+
+  // Drop into preview
+  previewWrap?.addEventListener("dragover", (e)=>{
+    e.preventDefault(); e.dataTransfer.dropEffect = "copy";
+    dropOverlay.classList.add("show");
+  });
+  previewWrap?.addEventListener("dragleave", ()=> dropOverlay.classList.remove("show"));
+  previewWrap?.addEventListener("drop", (e)=>{
+    e.preventDefault(); dropOverlay.classList.remove("show");
+    try{
+      const {name, code} = JSON.parse(e.dataTransfer.getData("text/plain"));
+      insertPage(name, code);
+      toggleDrawer(false);
+      alert("Page '"+name+"' dropped into Live Preview and added.");
+    }catch(err){ console.error(err); }
+  });
 
   loadLibrary();
 })();
